--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "shipping-info",
+  "name": "todo-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "shipping.js",
-  "dependencies": {
-    "express": "^4.14.0",
-    "https": "^1.0.0",
-    "request": "^2.74.0",
-    "shippo": "^1.1.3"
-  },
-  "devDependencies": {},
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.13.3",
+    "express": "^4.13.3",
+    "underscore": "^1.8.3",
+    "https": "^1.0.0",
+    "request": "^2.74.0",
+    "shippo": "^1.1.3",
+    "when": "^3.7.7"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scott-greenough/todo-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/scott-greenough/todo-api/issues"
+  },
+  "homepage": "https://github.com/scott-greenough/todo-api"
 }
