--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node shipping.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +17,4 @@
     "shippo": "^1.1.3",
     "when": "^3.7.7"
   },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/scott-greenough/todo-api.git"
-  },
-  "bugs": {
-    "url": "https://github.com/scott-greenough/todo-api/issues"
-  },
-  "homepage": "https://github.com/scott-greenough/todo-api"
 }
