--- a/package.json
+++ b/package.json
@@ -17,4 +17,13 @@
     "shippo": "^1.1.3",
     "when": "^3.7.7"
   },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scott-greenough/shipping.git"
+  },
+  "bugs": {
+    "url": "https://github.com/scott-greenough/shipping/issues"
+  },
+  "homepage": "https://github.com/scott-greenough/shipping"
 }
